--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.2"
+    "remark-html": "^13.0.2",
+    "swr": "^1.0.1"
   }
 }
