--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "remark": "^13.0.0",
     "remark-html": "^13.0.2",
     "swr": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "typescript": "^4.4.4"
   }
 }
